[gd_scene load_steps=6 format=3 uid="uid://bvtnv0b52l80q"]

[ext_resource type="Theme" uid="uid://c043uyufavnx4" path="res://ui_theme/ui_theme.tres" id="1_r4q75"]
[ext_resource type="Script" path="res://ui/inventory/item_slot.gd" id="2_7p2b6"]
[ext_resource type="Texture2D" uid="uid://d1v27eawchexy" path="res://assets/custom/item_slot_texture.png" id="2_nk7h0"]
[ext_resource type="Texture2D" uid="uid://f4q4jcuefhlb" path="res://assets/custom/map_item.png" id="3_g8ad7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u8ly5"]
texture = ExtResource("2_nk7h0")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="ItemSlot" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r4q75")
theme_override_styles/panel = SubResource("StyleBoxTexture_u8ly5")
script = ExtResource("2_7p2b6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="ItemDisplay" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("3_g8ad7")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
